--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "foundation-sites": "^6.4.4-rc1",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "particles.js": "^2.0.0",
+    "typed.js": "^2.0.6"
   }
 }
