--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "foundation-sites": "^6.4.4-rc1",
     "jquery": "^3.3.1",
+    "jquery-form": "^4.2.2",
     "particles.js": "^2.0.0",
     "typed.js": "^2.0.6"
   }
